// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers fetchEntity for *_FAILURE type should provide the initial state 1`] = `
Object {
  "error": true,
  "isFetching": false,
  "items": Array [],
}
`;

exports[`reducers fetchEntity for *_REQUEST type should provide the initial state 1`] = `
Object {
  "error": false,
  "isFetching": true,
  "items": Array [],
}
`;

exports[`reducers fetchEntity for *_SUCCESS type should provide the initial state 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "items": Array [
    1,
  ],
}
`;
